@@ -91,7 +91,11 @@ V3Global v3Global;
 void V3Global::readFiles() {
     V3Read reader (m_rootp);
     // Read top module
-    reader.readFile(new FileLine("CommandLine",0), opt.top(), false);
+    for (V3StringSet::iterator it = v3Global.opt.vFiles().begin();
+	 it != v3Global.opt.vFiles().end(); ++it) {
+	string filename = *it;
+	reader.readFile(new FileLine("CommandLine",0), filename, false);
+    }
 
     // Read libraries
     // To be compatible with other simulators,
